git-svn-id: svn://nlp.pwr.wroc.pl/czuk/gpw/web@194 73ad06da-0985-4a90-93d2-e6fe430330fc

--- a/public_html/css/annotations.css
+++ b/public_html/css/annotations.css
@@ -1,4 +1,6 @@
-.annotations span { border-bottom: 1px solid red; border-bottom-width: 2px; display: inline-table; margin-bottom: 0px; position: relative; }
+.annotations span { border-bottom: 1px solid red; border-bottom-width: 2px; display: inline-table; margin-bottom: 0px; position: relative; margin-bottom: 1px; }
+
+.annotations span span { margin: 0px; padding: 0px;}
 
 // Atomic elements
  span.atomic_an { border: 1px solid blue;  } 
