Zmiana formatowania tabelki z dokumentami. Poprawka walidacji anotacji przy dodawaniu.
git-svn-id: svn://nlp.pwr.wroc.pl/czuk/gpw/web@213 73ad06da-0985-4a90-93d2-e6fe430330fc

--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -2,15 +2,15 @@ body { font-family: arial,sans-serif; font-size: 12px; margin: 0px; padding: 0px
 
 p { margin: 0px; }
 
-table td { padding: 0px 5px; }
-table th { padding: 0px 10px; }
+#table td { padding: 0px 5px; }
+#table th { padding: 0px 10px; }
 table tr.even td { background: #eee; }
 
 table tr.month_12 td { border-bottom: 1px solid black; }
 
 .table { background: #777; }
-.table td { background: white; padding: 2px 5px; }
-.table th { background: white; padding: 2px 5px; }
+#.table td { background: white; padding: 2px 5px; }
+#.table th { background: white; padding: 2px 5px; }
 
 /* Box z filtrowaniem raportów */
 .filter_box li.active { color: black; background: #B9E057; }
