--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -64,7 +64,7 @@ em { font-style: normal; color: darkred; font-weight: bold;  }
 .row_even_formated td { background: #fc8; }
 .row_odd_formated td { background: #ffe4bf; }
 
-h1 { margin: 5px; font-size: 18px; line-height: 30px; }
+h1 { margin: 4px 0px; font-size: 18px; line-height: 30px; border-bottom: 1px solid #999; }
 h2 { font-size: 14px; margin: 5px; }
 h3 { font-size: 12px; margin: 5px; }
 
