--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -185,3 +185,8 @@ table.formated th { background: white; }
 .samples code { color: darkred; }
 
 .context { background: #FFE1D0; }
+
+b.invalid_border_start { background: red; margin: 2px 0 2px 2px; display: inline-table; }
+b.invalid_border_end { background: red; margin: 2px 2px 2px 0; display: inline-table; }
+b.invalid_border_middle { background: red; margin: 2px 0; display: inline-table; }
+b.invalid_border_one { background: red; margin: 2px; display: inline-table; }
