--- a/public_html/css/annotations.css
+++ b/public_html/css/annotations.css
@@ -1,4 +1,4 @@
-.annotations span { border-bottom: 1px solid red; border-bottom-width: 2px; display: inline-table; margin-bottom: 0px; position: relative; margin-bottom: 1px; }
+.annotations span { border-bottom: 1px solid red; border-bottom-width: 2px; display: inline-table; margin-bottom: 0px; position: relative; margin-bottom: 1px; color: black; }
 
 .annotations span span { margin: 0px; padding: 0px;}
 
@@ -21,7 +21,7 @@ span.facility_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px 
 span.institution_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px solid green; background:#DDCEFF;}
 span.periodic_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px solid green; background:#CEDEF4;}
 span.political_party_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px solid green; background:#BDFFEA;}
-span.tech_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px solid green; background:#FFFFC8;}
+span.tech_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px solid green; background:#EE8262;}
 span.title_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px solid green; background:#ECD9D9;}
 span.web_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px solid green; background:#C0E7F3;}
 span.astronomical_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px solid green; background: Gold;}
@@ -29,17 +29,27 @@ span.media_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px sol
 span.organization_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px solid green; background: GreenYellow;}
 
 span.admin_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px solid purple; background:#FFDFDF;}
+span.bay_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px solid purple; background:white;}
+span.cape_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px solid purple; background:white;}
 span.city_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px solid purple; background:#CACAFF;}
 span.continent_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px solid purple; background:#D6F8DE;}
 span.conurbation_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px solid purple; background:;}
 span.country_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px solid purple; background:#EEDCC8;}
+span.district_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px solid purple; background:white;}
 span.historical_region_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px solid purple; background:;}
+span.island_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px solid purple; background:white;}
+span.lagoon_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px solid purple; background:white;}
 span.mountain_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px solid purple; background:#FFFAA9;}
+span.ocean_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px solid purple; background:white;}
 span.park_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px solid purple; background:#F5CAFF;}
+span.peninsula_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px solid purple; background:white;}
 span.powiat_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px solid purple; background:#DDCEFF;}
 span.province_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px solid purple; background:#CEDEF4;}
 span.region_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px solid purple; background:#BDFFEA;}
+span.river_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px solid purple; background:white;}
 span.road_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px solid purple; background:#FFFFC8;}
+span.sandspit_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px solid purple; background:white;}
+span.sea_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px solid purple; background:white;}
 span.square_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px solid purple; background:#ECD9D9;}
 span.district_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px solid purple; background:#C0E7F3;}
 span.toponym_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px solid green; background:#C0E7F3;}
