New elements added to the transcriber toolbox.
git-svn-id: svn://nlp.pwr.wroc.pl/czuk/gpw/web@233 73ad06da-0985-4a90-93d2-e6fe430330fc

--- a/public_html/css/styles_lps.css
+++ b/public_html/css/styles_lps.css
@@ -18,3 +18,11 @@ ul.elements ul { margin: 0px; padding: 0px; }
 #zoom { -moz-user-select: none; cursor: -moz-grab}
 #zoom div { -moz-user-select: none; }
 #zoom img { -moz-user-select: none; }
+
+.elements a { text-decoration: underline; }
+span.tag { font-weight: bold; color: purple; }
+span.tag a { font-weight: bold; color: purple; text-decoration: underline; }
+span.attribute { color: navy; font-weight: bold;}
+span.attribute a { color: navy; font-weight: bold; text-decoration: underline;}
+span.value{ color: darkgreen; font-weight: bold;}
+span.value a{ color: darkgreen; font-weight: bold; text-decoration: underline;}
