Saving content in transcriber without reloading the page.
git-svn-id: svn://nlp.pwr.wroc.pl/czuk/gpw/web@235 73ad06da-0985-4a90-93d2-e6fe430330fc

--- a/public_html/css/styles_lps.css
+++ b/public_html/css/styles_lps.css
@@ -26,3 +26,6 @@ span.attribute { color: navy; font-weight: bold;}
 span.attribute a { color: navy; font-weight: bold; text-decoration: underline;}
 span.value{ color: darkgreen; font-weight: bold;}
 span.value a{ color: darkgreen; font-weight: bold; text-decoration: underline;}
+
+span.ajax_inline_status { color: #555; font-weight: normal; padding: 2px; }
+span.ajax_inline_status .time { font-weight: normal; font-size: 0.8em; margin: 0 2px; }
