--- a/public_html/css/styles_lps.css
+++ b/public_html/css/styles_lps.css
@@ -29,3 +29,16 @@ span.value a{ color: darkgreen; font-weight: bold; text-decoration: underline;}
 
 span.ajax_inline_status { color: #555; font-weight: normal; padding: 2px; }
 span.ajax_inline_status .time { font-weight: normal; font-size: 0.8em; margin: 0 2px; }
+
+#transcriber { position: relative; }
+#transcriber div.elements { overflow: auto; background: #e9e9e9; padding: 3px; border: 1px solid #aaa; }
+#transcriber div.inner_border { border: 1px solid #aaa; }
+#transcriber #zoom { border: 1px solid #aaa; }
+
+#transcriber.horizontal #frame_elements { float: right; width: 300px; }
+#transcriber.horizontal #frame_editor { margin-right: 320px; }
+
+#transcriber.vertical #frame_images { float: left; width: 500px; }
+#transcriber.vertical #frame_elements { margin-left: 510px; }
+#transcriber.vertical #frame_elements div.elements { height: 250px; }
+#transcriber.vertical #frame_editor { margin-left: 510px; }
