--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -213,3 +213,5 @@ b.invalid_border_one { background: red; margin: 2px; display: inline-table; }
 	padding: 0 1px;
 	margin-right: 5px;
 }
+
+#widget_annotation { height: 600px; overflow: auto; }
