Wyświetlenie dodatkowych kolumn dla korpusu 3.
git-svn-id: svn://nlp.pwr.wroc.pl/czuk/branches/lps@263 73ad06da-0985-4a90-93d2-e6fe430330fc

--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -64,6 +64,9 @@ em { font-style: normal; color: darkred; font-weight: bold;  }
 .row_even_formated td { background: #fc8; }
 .row_odd_formated td { background: #ffe4bf; }
 
+tr.odd:hover { background: red;}
+tr.odd:hover td { background: red;}
+
 h1 { margin: 4px 0px; font-size: 18px; line-height: 30px; border-bottom: 1px solid #999; }
 h2 { font-size: 14px; margin: 5px; }
 h3 { font-size: 12px; margin: 5px; }
