--- a/public_html/css/table-themes/blue/style.css
+++ b/public_html/css/table-themes/blue/style.css
@@ -25,8 +25,14 @@ table.tablesorter tbody td {
 	background-color: #FFF;
 	vertical-align: top;
 }
+table.tablesorter tbody tr:hover td {
+	background-color: #FF9;
+}
 table.tablesorter tbody tr.odd td {
 	background-color:#F0F0F6;
+}
+table.tablesorter tbody tr.odd:hover td {
+	background-color:#ff9;
 }
 table.tablesorter thead tr .headerSortUp {
 	background-image: url(asc.gif);
