--- a/public_html/css/annotations.css
+++ b/public_html/css/annotations.css
@@ -115,3 +115,7 @@ span.animal_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px so
 	background: lightgrey;
 	opacity: 0.9;
 }
+
+span.relationGrey {
+	background: grey;
+}
