--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -216,3 +216,8 @@ b.invalid_border_one { background: red; margin: 2px; display: inline-table; }
 	margin-right: 5px;
 }
 
+
+
+div.deleteRelation { 
+	cursor:pointer;	
+}
