Realizacja zadań przez Janka: #1294 - zaznaczenie relacji w widoku dokumentu, #1293 - potwierdzenie usunięcia relacji #1292 - jednoczesne działanie dodawania relacji i jednostek #1269 - kontrola sesji porzedas wyświetlania informacji o jednostce,
git-svn-id: svn://nlp.pwr.wroc.pl/czuk/gpw/web@273 73ad06da-0985-4a90-93d2-e6fe430330fc

--- a/public_html/css/annotations.css
+++ b/public_html/css/annotations.css
@@ -115,3 +115,24 @@ span.animal_nam { border: 1px dashed #555; padding: 0 1px; border-bottom: 2px so
 	background: lightgrey;
 	opacity: 0.9;
 }
+
+/*relations  */
+span.relationAvailable{
+	cursor : crosshair;	
+}
+
+span.relationGrey {
+	background: grey;
+	cursor : default;
+}
+
+span.unit_source {
+	border-right: 4px solid blue;
+}
+
+span.unit_target {
+	border-left: 4px solid green;
+}
+
+
+
