--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -215,3 +215,9 @@ b.invalid_border_one { background: red; margin: 2px; display: inline-table; }
 	padding: 0 1px;
 	margin-right: 5px;
 }
+
+
+
+div.deleteRelation { 
+	cursor:pointer;	
+}
