- perspektywa to szybkiego ustawiania tematu dokumentu, - walidacja dokumentu lps.
git-svn-id: svn://nlp.pwr.wroc.pl/czuk/gpw/web@283 73ad06da-0985-4a90-93d2-e6fe430330fc

--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -220,6 +220,9 @@ div.deleteRelation {
 	cursor:pointer;	
 }
 
+ul.topics a { color: #555; }
+ul.topics a.marked { color: black; background: yellow; }
+
 table#annmap .setGroup { font-weight: bold; }
 table#annmap tr.annotation_type_names:hover td { background: white !important; }
 table#annmap tr.annotation_type_names:hover td.empty2 { background: #fdf !important; }
