--- a/public_html/css/custom-theme/jquery-ui-1.7.2.custom.css
+++ b/public_html/css/custom-theme/jquery-ui-1.7.2.custom.css
@@ -51,7 +51,7 @@
 .ui-widget { font-family: Verdana,Arial,sans-serif; }
 .ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: Verdana,Arial,sans-serif; font-size: 1em; }
 .ui-widget-content { border: 1px solid #e0cfc2; color: #1e1b1d; background-color: white; }
-.ui-widget-content a { color: #1e1b1d; }
+.ui-widget-content a { color: navy; }
 .ui-widget-header { border: 1px solid #d49768; background: #cb842e url(images/ui-bg_glass_25_cb842e_1x400.png) 50% 50% repeat-x; color: #ffffff; font-weight: bold; padding: 0px 4px}
 .ui-widget-header a { color: #ffffff; }
 
