--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -151,6 +151,7 @@ table#report th { color: grey; font-size: 10px; vertical-align: top; width: 40px
 #content.takipi span.ann { border-width: 2px; line-height: 22px; padding: 2px;} 
 
 #content span.selected { background: #FF837E !important; border-top: 1px solid #BF1616 !important; }
+.marked { font-weight: bold; }
 
 /****
  * Powtarzalne elementy strony
@@ -230,3 +231,5 @@ table#annmap tr.annotation_type_names ol { margin: 0; padding-left: 20px; }
 table#annmap tr.annotation_type_names ol li:hover { background: #ff9; }
 table#annmap .empty { background: #ddd; }
 table#annmap .empty2 { background: #fdf; }
+
+#list_of_words { margin-left: 0px; padding: 15px; margin-top: 0px; padding-top: 0px} 
