Poprawki w perspektywie transkrypcji listów.
git-svn-id: svn://nlp.pwr.wroc.pl/czuk/gpw/web@287 73ad06da-0985-4a90-93d2-e6fe430330fc

--- a/public_html/css/styles_lps.css
+++ b/public_html/css/styles_lps.css
@@ -20,6 +20,9 @@ ul.elements ul { margin: 0px; padding: 0px; }
 #zoom img { -moz-user-select: none; }
 
 .elements a { text-decoration: underline; }
+ol.elements { margin-left: 15px; padding-left: 15px;}
+ol.elements ul { padding-left: 15px; }
+
 span.tag { font-weight: bold; color: purple; }
 span.tag a { font-weight: bold; color: purple; text-decoration: underline; }
 span.attribute { color: navy; font-weight: bold;}
