Realizacja zadań przez kotu: #1330 Reorganizacja edycji jednostki #1329 Lista warstw #1328 Zapisanie stanu prawej kolumny przy przechodzeniu między dokumentami #1314 Wielokrotne wyświetlenie tego samego linku po kliknięciu w anotację #1313 Wczytywanie informacji o jednostce #1294 Jak zaznaczyć relacje między jednostkami w widoku dokumentu? #1269 Kontrola sesji podczas wyświetlania informacji o jednostce i tworzeniu relacji
git-svn-id: svn://nlp.pwr.wroc.pl/czuk/gpw/web@306 73ad06da-0985-4a90-93d2-e6fe430330fc

--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -217,6 +217,7 @@ b.invalid_border_one { background: red; margin: 2px; display: inline-table; }
 	margin-right: 5px;
 }
 
+
 div.deleteRelation { 
 	cursor:pointer;	
 }
@@ -233,3 +234,12 @@ table#annmap .empty { background: #ddd; }
 table#annmap .empty2 { background: #fdf; }
 
 #list_of_words { margin-left: 0px; padding: 15px; margin-top: 0px; padding-top: 0px} 
+
+span.hiddenAnnotation {
+	background: white !important;
+	border : none !important;
+
+}
+
+.hiddenLayer{
+	background:lightgrey;
