Zmiana formatowania tabelki z warstwami. Uwzględnienie okna z błędami przy automatycznym dopasowaniu wymiary strony.
git-svn-id: svn://nlp.pwr.wroc.pl/czuk/branches/kotu/web@323 73ad06da-0985-4a90-93d2-e6fe430330fc

--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -244,3 +244,10 @@ span.hiddenAnnotation {
 .hiddenLayer{
 	background:lightgrey;
 }
+
+#rightPanelAccordion .ui-accordion-content {
+	padding: 5px !important;
+}
+#annotation_layers td {
+	padding: 1px;
+}
