RESIZE dla widoku wyboru tematu.
git-svn-id: svn://nlp.pwr.wroc.pl/czuk/gpw/web@324 73ad06da-0985-4a90-93d2-e6fe430330fc

--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -33,7 +33,7 @@ table tr.month_12 td { border-bottom: 1px solid black; }
 #filter_menu { }
 #filter_menu ul { margin: 0px; padding: 0px; }
 #filter_menu li { list-style: none; margin-left: 0px; padding-left: 0px; }
-#filter_menu a { color: gray; background: transparent !important; }
+#filter_menu a { color: darkblue; background: transparent !important; }
 #filter_menu a.selected { color: blue; background: transparent !important; }
 
 em { font-style: normal; color: darkred; font-weight: bold;  }
@@ -238,7 +238,6 @@ table#annmap .empty2 { background: #fdf; }
 span.hiddenAnnotation {
 	background: white !important;
 	border : none !important;
-
 }
 
 .hiddenLayer{
