--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -258,3 +258,15 @@ span.hiddenAnnotation {
 }
 
 
+
+/*Event editor*/
+.tableContent {
+	width:300px;
+	height:300px;	
+	overflow:auto;
+}
+
+.tableContainer{
+	margin:5px;	
+}
+
