--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -159,7 +159,7 @@ table#report th { color: grey; font-size: 10px; vertical-align: top; width: 40px
  * Powtarzalne elementy strony
  */
 /* Boks z opcjami filtru jednej własności */
-.filter_box { }
+.filter_box { width: 260px; }
 .filter_box h2 { background: white; border: 1px solid #ccc; border-bottom: 1px solid #888; margin-left: 0px; margin-right: 0px; padding: 0px 1px; color: grey; margin-bottom: 0px; font-size: 12px; }
 .filter_box h2.active { color: black; }
 .filter_box small.toggle { float: right; margin-top: 3px; margin-right: 2px; }
@@ -259,8 +259,6 @@ span.hiddenAnnotation {
 .setContainer, .subsetContainer, .typeContainer {
 	padding:10px;	
 }
-
-
 
 /*Event editor*/
 .tableContent {
