--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -273,3 +273,4 @@ ul#list_of_flags  { margin: 4px; padding: 0; }
 ul#list_of_flags li { list-style: none; margin: 0px; margin-bottom: 3px; }
 ul#list_of_flags li img { vertical-align: -3px; }
 
+table tr.disabled td { background: #eee !important; }
