--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -153,6 +153,8 @@ table#report th { color: grey; font-size: 10px; vertical-align: top; width: 40px
 #content.takipi span.ann { border-width: 2px; line-height: 22px; padding: 2px;} 
 
 #content span.selected { background: #FF837E !important; border-top: 1px solid #BF1616 !important; }
+#content span.selectedSource, span.selectedSource { background: #FFCECE !important; color: red !important; }
+#content span.selectedTarget, span.selectedTarget { background: #FFFFC8 !important; color: blue !important; }
 .marked { font-weight: bold; }
 
 /****
