--- a/public_html/css/table-themes/blue/style.css
+++ b/public_html/css/table-themes/blue/style.css
@@ -7,7 +7,7 @@ table.tablesorter {
 	width: 100%;
 	text-align: left;
 }
-table.tablesorter thead tr th, table.tablesorter tfoot tr th {
+table.tablesorter tr th, table.tablesorter tr th {
 	background-color: #e6EEEE;
 	border: 1px solid #FFF;
 	font-size: 8pt;
@@ -25,13 +25,13 @@ table.tablesorter tbody td {
 	background-color: #FFF;
 	vertical-align: top;
 }
-table.tablesorter tbody tr:hover td {
+table.tablesorter tbody tr:hover td, table.tablesorter tbody tr:hover th {
 	background-color: #FF9;
 }
 table.tablesorter tbody tr.odd td {
 	background-color:#F0F0F6;
 }
-table.tablesorter tbody tr.odd:hover td {
+table.tablesorter tbody tr.odd:hover td, table.tablesorter tbody tr.odd:hover th {
 	background-color:#ff9;
 }
 table.tablesorter thead tr .headerSortUp {
